--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    メッセージ一覧
+    <h3 class="panel-title">メッセージ一覧</h3>
   </div>
   <div class="panel-body">
     <% @messages.each do |message| %>
@@ -11,11 +11,17 @@
   </div>
 </div>
 
-<%= form_for(@message) do |f| %>
-  名前:
-  <%= f.text_field :name %>
+<%= form_for(@message, html: {role: "form"}) do |f| %>
+  <div class="form-group">
+    <label for="InputName">名前</label>
+   <%= f.text_field :name, class: "form-control" %>
+  </div>
 
-  内容:
-  <%= f.text_field :body %>
-  <%= f.submit class: "btn btn-sm btn-primary" %>
+   <div class="form-group">
+    <label for="InputContent">内容</label>
+    <%= f.text_area :body , class: "form-control" %>
+  </div> 
+
+  <%= f.submit class: "btn btn-sm btn-primary", value: "メッセージ送信" %>
+
 <% end %>
