--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -11,14 +11,14 @@
   </div>
 </div>
 
-<%= form_for(@message, html: {role: "form"}) do |f| %>
+<%= form_for(@message) do |f| %>
   <div class="form-group">
-    <label for="InputName">名前</label>
+    <label for="message_name">名前</label>
    <%= f.text_field :name, class: "form-control" %>
   </div>
 
    <div class="form-group">
-    <label for="InputContent">内容</label>
+    <label for="message_body">内容</label>
     <%= f.text_area :body , class: "form-control" %>
   </div> 
 
