--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,7 +5,9 @@
   
   <div class="panel-body">
     <% @messages.each do |message| %>
-      <span class="label label-info"><%= message.name %></span>
+      <span class="label label-info">名前：<%= message.name %></span>
+      <span class="label label-warning">年齢：<%= message.age %></span>
+      
       <%= message.body %>
       (
       <%= link_to "edit" ,edit_message_path(message) %>
