--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -19,10 +19,17 @@
    <%= f.text_field :name, class: "form-control" %>
   </div>
 
+  <div class="form-group">
+    <label for="message_age">年齢</label>
+    <%= f.text_field :age, class: "form-control" %>
+  </div>
+
    <div class="form-group">
     <label for="message_body">内容</label>
     <%= f.text_area :body , class: "form-control" %>
   </div> 
+
+
 
   <%= f.submit class: "btn btn-sm btn-primary", value: "メッセージ送信" %>
 
